@@ -15,16 +15,24 @@ if test $# -ne 2; then
 fi
 
 module=$1
+document=$2
 
 prefix=@prefix@
-gtkdocdir=@datadir@/gtk-doc/
+gtkdocdir=@datadir@/gtk-doc
+
+declaration=$gtkdocdir/gtk-doc.dcl
+
+if head -1 $document | grep -q "<?xml"; then
+  declaration=$gtkdocdir/xml.dcl
+fi
 
 # Delete the old index.sgml file, if it exists.
 if test -f index.sgml; then
       rm -f index.sgml
 fi
 
-@JADE@ -t sgml -w no-idref -d $gtkdocdir/gtk-doc.dsl $gtkdocdir/gtk-doc.dcl $2
+@JADE@ -t sgml -w no-idref -d $gtkdocdir/gtk-doc.dsl $declaration $document
 sed s%href=\"%href=\"$module/% < index.sgml > index.sgml.tmp && mv index.sgml.tmp index.sgml
 
 echo "timestamp" > ../html.stamp
+
